crates/uitest/fixtures/ty/def/alias_cycle.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/alias_cycle.fe
---
error[3-0004]: type alias cycle
  ┌─ alias_cycle.fe:1:11
  │
1 │ type T1 = T1
  │           ^^ cycle happens here

error[3-0004]: type alias cycle
  ┌─ alias_cycle.fe:5:11
  │
3 │ type T2 = T3
  │      -- type alias defined here
4 │ type T3 = T4
  │      -- type alias defined here
5 │ type T4 = T2
  │           ^^ cycle happens here
